<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.SignUpActivity">
    <LinearLayout
        android:gravity="center|left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/userMailText"
            android:textSize="14dp"
            android:inputType="textEmailAddress"
            android:theme="@style/EditTextStyle"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <EditText
            android:id="@+id/userPassText"
            android:textSize="14dp"
            android:inputType="textPassword"
            android:theme="@style/EditTextStyle"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <EditText
            android:id="@+id/userPassConfirmText"
            android:textSize="14dp"
            android:inputType="textPassword"
            android:theme="@style/EditTextStyle"
            android:hint="@string/password_confirm_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <CheckBox
            android:id="@+id/userSignUpCheck"
            android:gravity="center"
            android:textSize="12dp"
            android:text="개인정보 수집, 이용 및 서비스 이용약관에 동의합니다."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/sign_up_success_non_button"
            android:enabled="false"
            android:textColor="@color/white"
            android:id="@+id/signUpButton"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/signUpSuccess"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
    </LinearLayout>
</LinearLayout>