<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#aaaaaa"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="login"
            type="condom.best.condom.View.Sign.LogInViewModel"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sign.LogInActivity">
        <LinearLayout
            android:id="@+id/signContainer"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:onClick="@{() -> login.facebookLoginClick()}"
                android:background="@drawable/sign_up_button_facebook"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/com_facebook_button_icon_white"
                    android:layout_margin="12dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:text="@string/facebookSignUpBtn"
                    android:layout_marginRight="32dp"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:onClick="@{() -> login.signUpClick()}"
                android:background="@drawable/sign_up_button"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_email"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:text="@string/emailSignUp"
                    android:layout_marginRight="32dp"
                    android:textStyle="bold"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <TextView
                android:onClick="@{() -> login.signInClick()}"
                android:text="@string/alreadySignUp"
                android:layout_marginBottom="30dp"
                android:textSize="14dp"
                android:textColor="#ffffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</layout>